k8s/02-deployment-normal.yaml
---
# normal version - return data and time
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpledata-normal
  namespace: demo-caller
spec:
  selector:
    matchLabels:
      app: simpledata
  replicas: 1
  template:
    metadata:
      name: simpledata
      labels:
        app: simpledata
        version: normal
    spec:
      containers:
      - name: simpledata
        image: ailtonmsj/simpledata:v8-controlserverstatus
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "300m"
            memory: "256Mi"
          requests:
            cpu: "200m"
            memory: "128Mi"
...
