k8s/03-deployment-delay.yaml
---
# delay version - return data and time with 2 seconds delay
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpledata-delay
  namespace: demo-caller
spec:
  selector:
    matchLabels:
      app: simpledata
  replicas: 1
  template:
    metadata:
      name: simpledata
      labels:
        app: simpledata
        version: delay
    spec:
      containers:
      - name: simpledata
        image: ailtonmsj/simpledata:v6-delay
        imagePullPolicy: Always
...
